fix: overflow-scroll x issue

--- a/src/app/index.module.scss
+++ b/src/app/index.module.scss
@@ -38,6 +38,7 @@
 
 .main {
   height: 100vh;
+  overflow-x: hidden;
 }
 
 @supports (height: 100dvh) {
