--- a/src/app/sponsors/index.module.scss
+++ b/src/app/sponsors/index.module.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 100vw;
+  width: 99vw;
   color: white;
   text-shadow: 0 0.5px 10px black;
 
